--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 ---
 sudo: false
+env:
+  global:
+    - CC_TEST_REPORTER_ID=749e6dbc26a0c80d62d652a4e6eac4871172841d233d1f5bd1261fc2ecc3ffc8
 language: ruby
 cache: bundler
 rvm:
   - 2.4.0
 before_install: gem install bundler -v 1.16.5
+script:
+  - bundle exec rspec
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
