--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ rvm:
 before_install: gem install bundler -v 1.16.5
 script:
   - bundle exec rspec
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
